increase fonts and fix food item alignment

--- a/styles/layout/orderbar.scss
+++ b/styles/layout/orderbar.scss
@@ -108,6 +108,7 @@
 
 
 .paysum{
+ margin-bottom:60px;
  padding:25px;
 
 }
@@ -140,7 +141,9 @@
 }
 
 .paysum-total{
+    font-weight: bold;
     padding-top:15px;
+    font-size:1.3rem;
 
     & .first{
         color:red;
@@ -148,9 +151,32 @@
     }
 
     & .second{
+        font-size:1.3rem;
         font-weight: 700;
+        color:#2fc92f;
     }
 }
+
+.pay-amount{
+    border:1px solid #000;
+    padding:8px;
+    border-radius:4px;
+}
+
+.paysum-divider{
+    border-top: 2px  dashed rgb(83, 77, 77);
+    width: 100%;
+}
+.order-customer-amount-cont{
+   
+    padding:0px 25px;
+    .order-customer-amount{
+     padding:8px;
+     border:1px solid #000;
+    }
+}
+
+
 
 .orderbtn{
     padding:25px;
